class Amigo
{
private:
    /* data */
public:
    Amigo
(/* args */);
    ~Amigo
();
};

Amigo::Amigo(/* args */)
{
}

Amigo::~Amigo()
{
}
