class Bandera

{
private:
    /* data */
public:
    Bandera(/* args */);
    ~Bandera();
};

Bandera::Bandera
(/* args */)
{
}

Bandera::~Bandera(){
}
