class Bowser
{
private:
    /* data */
public:
    Bowser(/* args */);
    ~Bowser();
};

Bowser::Bowser(/* args */)
{
}

Bowser::~Bowser()
{
}
