class Carnivora
{
private:
    /* data */
public:
    Carnivora(/* args */);
    ~Carnivora();
};

Carnivora::Carnivora(/* args */)
{
}

Carnivora::~Carnivora()
{
}
    