class Castillo
{
private:
    /* data */
public:
    Castillo(/* args */);
    ~Castillo();
};

Castillo::Castillo(/* args */)
{
}

Castillo::~Castillo()
{
}
