class Estrella

{
private:
    /* data */
public:
    Estrella
    (/* args */);
    ~Estrella
    ();
};

Estrella
::Estrella
(/* args */)
{
}

Estrella
::~Estrella
()
{
}
