class Flor
{
private:
    /* data */
public:
    Flor(/* args */);
    ~Flor();
};

Flor::Flor(/* args */)
{
}

Flor::~Flor()
{
}
