class Goomba

{
private:
    /* data */
public:
    Goomba
    (/* args */);
    ~Goomba
    ();
};

Goomba
::Goomba
(/* args */)
{
}

Goomba
::~Goomba
()
{
}
