class Hongo

{
private:
    /* data */
public:
    Hongo(/* args */);
    ~Hongo();
};

Hongo ::Hongo(/* args */)
{
}

Hongo ::~Hongo()
{
}
