class Koopa

{
private:
    /* data */
public:
    Koopa
    (/* args */);
    ~Koopa
    ();
};

Koopa
::Koopa
(/* args */)
{
}

Koopa
::~Koopa
()
{
}
