class LuckyBlock
{
private:
    /* data */
public:
    LuckyBlock
(/* args */);
    ~LuckyBlock
();
};

LuckyBlock::LuckyBlock(/* args */)
{
}

LuckyBlock::~LuckyBlock()
{
}
