class Luigi
{
private:
    /* data */
public:
    Luigi(/* args */);
    ~Luigi();
};

Luigi::Luigi(/* args */)
{
}

Luigi::~Luigi()
{
}
