class Moneda
{
private:
    /* data */
public:
    Moneda(/* args */);
    ~Moneda();
};

Moneda::Moneda(/* args */)
{
}

Moneda::~Moneda()
{
}
