class Mundo
{
private:
    /* data */
public:
    Mundo(/* args */);
    ~Mundo();
};

Mundo::Mundo(/* args */)
{
}

Mundo::~Mundo()
{
}
