class Nube
{
private:
    /* data */
public:
    Nube(/* args */);
    ~Nube();
};

Nube::Nube(/* args */)
{
}

Nube::~Nube()
{
}
