class Peach
{
private:
    /* data */
public:
    Peach(/* args */);
    ~Peach();
};

Peach::Peach(/* args */)
{
}

Peach::~Peach()
{
}
