class Piso

{
private:
    /* data */
public:
    Piso
    (/* args */);
    ~Piso
    ();
};

Piso
::Piso
(/* args */)
{
}

Piso
::~Piso
()
{
}
