class Plomero
{
private:
    /* data */
public:
    Plomero(/* args */);
    ~Plomero();
};

Plomero::Plomero(/* args */)
{
}

Plomero::~Plomero()
{
}
