class Poder

{
private:
    /* data */
public:
    Poder
    (/* args */);
    ~Poder
    ();
};

Poder
::Poder
(/* args */)
{
}

Poder
::~Poder
()
{
}
