class Tiempo
{
private:
    /* data */
public:
    Tiempo(/* args */);
    ~Tiempo();
};

Tiempo::Tiempo(/* args */)
{
}

Tiempo::~Tiempo()
{
}
