class Toad
{
private:
    /* data */
public:
    Toad(/* args */);
    ~Toad();
};

Toad::Toad(/* args */)
{
}

Toad::~Toad()
{
}
