class Tubo

{
private:
    /* data */
public:
    Tubo
    (/* args */);
    ~Tubo
    ();
};

Tubo
::Tubo
(/* args */)
{
}

Tubo
::~Tubo
()
{
}
